--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: admob_easy
 description: "Simplify your Flutter app's integration with Google AdMob for effortless monetization."
-homepage: https://https://github.com/matifdeveloper/admob_easy
-repository: https://https://github.com/matifdeveloper/admob_easy
+homepage: https://github.com/matifdeveloper/admob_easy
+repository: https://github.com/matifdeveloper/admob_easy
 version: 0.0.1
 admob_easy:
   path: ../admob_easy
