--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: admob_easy
 description: "Simplify your Flutter app's integration with Google AdMob for effortless monetization."
 homepage: https://github.com/matifdeveloper/admob_easy
 repository: https://github.com/matifdeveloper/admob_easy
-version: 0.0.2
+version: 0.0.3
 admob_easy:
   path: ../admob_easy
 
@@ -13,8 +13,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_mobile_ads: ^4.0.0
-  async_preferences: ^0.8.0
+  google_mobile_ads: ^5.0.0
+  async_preferences: ^0.9.0
+  connectivity_plus: ^6.0.1
 
 dev_dependencies:
   flutter_test:
