--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: admob_easy
 description: "Simplify your Flutter app's integration with Google AdMob for effortless monetization."
 homepage: https://github.com/matifdeveloper/admob_easy
 repository: https://github.com/matifdeveloper/admob_easy
-version: 1.1.7
+version: 1.1.8
 admob_easy:
   path: ../admob_easy
 
@@ -13,7 +13,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_mobile_ads: 5.1.0
+  google_mobile_ads: ^5.2.0
   async_preferences: ^1.0.1
   connectivity_plus: ^6.1.0
   shimmer: ^3.0.0
